WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
223217
REGRESSION(
r271642
) Another app was relying on DOMWindow reuse
https://bugs.webkit.org/show_bug.cgi?id=223217
Summary
REGRESSION(r271642) Another app was relying on DOMWindow reuse
Alex Christensen
Reported
2021-03-15 15:09:02 PDT
REGRESSION(
r271642
) Another app was relying on DOMWindow reuse
Attachments
Patch
(4.81 KB, patch)
2021-03-15 15:12 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(8.65 KB, patch)
2021-03-15 15:56 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2021-03-15 15:12:03 PDT
Created
attachment 423250
[details]
Patch
Geoffrey Garen
Comment 2
2021-03-15 15:38:31 PDT
Comment on
attachment 423250
[details]
Patch r=me
Alex Christensen
Comment 3
2021-03-15 15:56:17 PDT
Created
attachment 423257
[details]
Patch
EWS
Comment 4
2021-03-15 17:37:17 PDT
Committed
r274455
: <
https://commits.webkit.org/r274455
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 423257
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-03-15 17:38:23 PDT
<
rdar://problem/75456082
>
youenn fablet
Comment 6
2021-08-03 05:10:51 PDT
See
https://bugs.webkit.org/show_bug.cgi?id=228736
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug