REGRESSION(r271642) Another app was relying on DOMWindow reuse https://bugs.webkit.org/show_bug.cgi?id=223217 <rdar://75186172>

Patch by Alex Christensen <achristensen@webkit.org> on 2021-03-15
Reviewed by Geoff Garen.

Source/WebCore:

We already fixed an app in r273817 but in rdar://75186172 we have another broken app.
It's time for a linkedOnOrAfter check.

* bindings/js/JSWindowProxy.cpp:
(WebCore::JSWindowProxy::setWindow):
* platform/cocoa/VersionChecks.h:

Source/WebKit:

* UIProcess/API/Cocoa/WKProcessPool.mm:
(+[WKProcessPool _setLinkedOnOrBeforeEverythingForTesting]):
* UIProcess/API/Cocoa/WKProcessPoolPrivate.h:

Source/WTF:

* Scripts/Preferences/WebPreferencesInternal.yaml:

Tools:

* TestWebKitAPI/Tests/mac/JSWrapperForNodeInWebFrame.mm:
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/235311@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274455 268f45cc-cd09-0410-ab3c-d52691b4dbfc