Source/WebCore/platform/cocoa/VersionChecks.h
@@ -69,6 +69,7 @@ enum class SDKVersion : uint32_t {
     FirstThatObservesClassProperty = DYLD_IOS_VERSION_14_5,
     FirstWithNullOriginForNonSpecialSchemedURLs = DYLD_IOS_VERSION_15_0,
     FirstWithoutWeChatScrollingQuirk = DYLD_IOS_VERSION_14_5,
+    FirstWithDOMWindowReuseRestriction  = DYLD_IOS_VERSION_14_5,
 #elif PLATFORM(MAC)
     FirstWithNetworkCache = DYLD_MACOSX_VERSION_10_11,
     FirstWithExceptionsForDuplicateCompletionHandlerCalls = DYLD_MACOSX_VERSION_10_13,
@@ -89,6 +90,7 @@ enum class SDKVersion : uint32_t {
     FirstWithDataURLFragmentRemoval = DYLD_MACOSX_VERSION_11_3,
     FirstWithHTMLDocumentSupportedPropertyNames = DYLD_MACOSX_VERSION_11_3,
     FirstWithNullOriginForNonSpecialSchemedURLs = DYLD_MACOSX_VERSION_12_00,
+    FirstWithDOMWindowReuseRestriction = DYLD_MACOSX_VERSION_11_3,
 #endif
 };
 
